...
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offsetLarge"
        android:paddingHorizontal="@dimen/offsetLarge"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_title"
            android:textColor="@color/textPrimary"
            android:textAppearance="@style/TextAppearance.H2"/>
...
            android:layout_height="wrap_content"
            android:text="@string/start_create_new_wallet"
            android:textAppearance="@style/TextAppearance.Label1" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.App.Button.Secondary"
            android:id="@+id/import_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offsetMedium"
            android:text="@string/start_import_wallet"
            android:textAppearance="@style/TextAppearance.Label1" />

...
