<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/offsetLarge"
    android:layout_gravity="center"
    android:orientation="horizontal">

    <uikit.widget.IconButtonView
        android:id="@+id/buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_plus_28"
        android:title="@string/buy"/>

    <uikit.widget.IconButtonView
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_arrow_up_28"
        android:title="@string/send"/>

    <uikit.widget.IconButtonView
        android:id="@+id/receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_arrow_down_28"
        android:title="@string/receive"/>

</androidx.appcompat.widget.LinearLayoutCompat>