...
    isUnverified = false,
)

internal val PREVIEW_DOMAIN_NFT = HistoryNft(
    address = PREVIEW_TO_ADDRESS,
    name = "tonkeepertesttesttest.ton",
    collectionName = "TON DNS Domains",
    imageUrl = "",
    isVerified = true,
    isUnverified = false,
)

private fun previewActivity(
...
