...
                scrollState.animateScrollTo(target)
            }
        }
    }

    MoonTopAppBarSimple(
        title = "Leverage",
        actionIconRes = UIKitIcon.ic_close_16,
        onActionClick = onClose,
    )

    MoonSurface {
        Column(
...
                        Text(
                            text = "${leverage}x",
                            style = remember { TextStyle(fontSize = 44.sp, fontWeight = FontWeight.Bold) },
                            color = UIKit.colorScheme.text.primary,
                        )
                        MoonBadgeButton(
                            content = { MoonSmallItemTitle("MAX") },
                            onClick = { scope.launch { scrollState.animateScrollTo((count - 1) * tickWidthPx.roundToInt()) } },
                        )
                    }

                    Spacer(Modifier.height(20.dp))

...
